# taco

./: .gitignore  CLAUDE_FEATURES_GUIDE.md  CLAUDE_USECASES.md  INSTALL.md  INSTALLATION_SUCCESS.md  LICENSE  ORCHESTRATION_FLOW.md  QUICKSTART.md  README.md  SUMMARY.md  UPGRADE_TO_V2.md  church_taco_fixed.txt  church_website_taco_prompt.txt  church_website_taco_v2.txt  debug_full_parse.sh  debug_parse.sh  debug_parse2.sh  debug_parsing.sh  debug_spec_check.sh  fixed_check_function.sh  install.sh  mirror_test.sh  package-lock.json  simple_test.sh  spec_detection_fix_documentation.md  taco  taco-v3  taco_coordination_fix.sh  taco_improved_with_tmux.py  taco_v3_concept.py  test_claude_output.txt  test_comprehensive_parsing.sh  test_current_function.sh  test_parsing_claude.sh  test_problematic_output.txt  test_spec.txt  test_spec_detection.sh  test_v2_features.sh  test_v2_parsing.sh  trace_first_agent.sh  (+1 more)
.claude/: settings.local.json
docs/: ARCHITECTURE.md  EXAMPLES.md  QUICKSTART.md
docs/bash-v3/: BUG_FIX_SUMMARY.md  MIGRATION.md
docs/legacy/: INSTALLED.md  RUN_TACO.sh  run_taco_dsite.sh
docs/python-v3/: README.md  pyproject.toml
docs/python-v3/src/taco/: __init__.py  models.py  orchestrator.py  parser.py  redis_queue.py
docs/python-v3/tests/: conftest.py  test_parser.py  test_redis_queue.py
docs/python-v3/tests/fixtures/: sample_mother_output.txt
examples/: netflix-clone-comparison.md
src/taco/: __main__.py  orchestrator.py  parser.py  tmux_executor.py
src/taco_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
taco/config/: taco.settings.json
taco/lib/: taco-agent-tools.sh  taco-agents.sh  taco-claude-subagents.sh  taco-common.sh  taco-docker.sh  taco-hooks.sh  (+10 more)
templates/: agent-prompt.txt  coordination-prompt.txt  mother-prompt.txt
tests/: test_tmux_executor.py
(+6 files in other folders)
